log/build_2021-03-17_13-34-03/main_package/stderr.log
  File "/home/jordy/ku_turtlebot/install/main_package/lib/python3.8/site-packages/main_package/demo_pub.py", line 13
    int64 self.i = 0
          ^
SyntaxError: invalid syntax

